Found a fix to the Canvas sizing.
- Talked with Matt Goodson, got some ideas, now the Canvas is the correct size based on the Screen size.

#story[9]

--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.*?>
 <?import java.lang.*?>
 <?import javafx.scene.canvas.*?>
@@ -14,13 +16,13 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="boatGridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.controller.MainController">
+<GridPane fx:id="boatGridPane" maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.controller.MainController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" percentWidth="20.0" prefWidth="280.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1000.0" minWidth="10.0" percentWidth="80.0" prefWidth="918.0" />
+      <ColumnConstraints percentWidth="80.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" percentHeight="100.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints percentHeight="100.0" />
   </rowConstraints>
    <children>
       <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="720.0" prefWidth="200.0">
@@ -61,17 +63,11 @@
             </Accordion>
          </content>
       </ScrollPane>
-      <AnchorPane fx:id="boatAnchorPane" GridPane.columnIndex="1">
+      <AnchorPane GridPane.columnIndex="1">
          <children>
-            <Canvas fx:id="mainCanvas" height="652.0" width="703.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" GridPane.columnIndex="1">
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor>
+            <Canvas fx:id="mainCanvas" AnchorPane.topAnchor="25.0" GridPane.columnIndex="1">
             </Canvas>
          </children>
-         <cursor>
-            <Cursor fx:constant="CROSSHAIR" />
-         </cursor>
       </AnchorPane>
    </children>
 </GridPane>
