Starting the implementation of boat animations
-mainWindow now has a Group node which will hold all the Circles (boats) for the race
-Race now can create circles from the boats generated for the race and stores these in a hasmap
-Animation timer and race have been scaffolded for getting the animations to move
-TODO's have been noted for the work we need to complete for the next stage of this animation

#story[9]

--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -65,8 +65,12 @@
       </ScrollPane>
       <AnchorPane GridPane.columnIndex="1">
          <children>
-            <Canvas fx:id="mainCanvas" AnchorPane.topAnchor="25.0" GridPane.columnIndex="1">
-            </Canvas>
+            <Group fx:id="raceGroup" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                   <Canvas fx:id="mainCanvas" AnchorPane.topAnchor="25.0" GridPane.columnIndex="1">
+                   </Canvas>
+               </children>
+            </Group>
          </children>
       </AnchorPane>
    </children>
