Updated scene builder Added observable lists so we can view the order of the racing boats
Signed-off-by: Stefan Hall <sha162@uclive.ac.nz>

#story[13, 15]
#pair[sha162, tjg73]

--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.canvas.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Accordion?>
@@ -11,7 +17,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:id="boatGridPane" maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.controller.MainController">
+<GridPane fx:id="boatGridPane" maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.controller.MainController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" percentWidth="20.0" prefWidth="280.0" />
       <ColumnConstraints percentWidth="80.0" />
@@ -20,15 +26,28 @@
     <RowConstraints percentHeight="100.0" />
   </rowConstraints>
    <children>
-      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="720.0" prefWidth="200.0">
-         <content>
-            <Accordion prefHeight="720.0" prefWidth="275.0">
+      <GridPane>
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="223.0" minWidth="10.0" percentWidth="33.0" prefWidth="77.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.0" minWidth="10.0" percentWidth="67.0" prefWidth="203.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="705.0" minHeight="10.0" prefHeight="378.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="456.0" minHeight="10.0" prefHeight="372.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="720.0" prefWidth="200.0">
+               <content>
+                  <TableView fx:id="PositionsTable" prefHeight="376.0" prefWidth="128.0">
+                    <columns>
+                      <TableColumn fx:id="positionsColumn" minWidth="-Infinity" prefWidth="90.0" text="Positions" />
+                    </columns>
+                  </TableView>
+               </content>
+            </ScrollPane>
+            <Accordion prefHeight="413.0" prefWidth="278.0" visible="false" GridPane.rowIndex="1">
               <panes>
-                <TitledPane animated="false" text="Real Time">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </TitledPane>
+                <TitledPane animated="false" text="Real Time" />
                 <TitledPane animated="false" text="Race Time">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
@@ -56,8 +75,14 @@
                   </TitledPane>
               </panes>
             </Accordion>
-         </content>
-      </ScrollPane>
+            <TableView fx:id="boatInfoTableView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+              <columns>
+                <TableColumn fx:id="boatNameColumn" prefWidth="104.0" text="Boat" />
+                <TableColumn fx:id="boatSpeedColumn" prefWidth="98.0" text="Speed" />
+              </columns>
+            </TableView>
+         </children>
+      </GridPane>
       <AnchorPane GridPane.columnIndex="1">
          <children>
             <Group fx:id="raceGroup" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
