--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -28,57 +28,22 @@
    <children>
       <GridPane>
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="223.0" minWidth="10.0" percentWidth="33.0" prefWidth="77.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.0" minWidth="10.0" percentWidth="67.0" prefWidth="203.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="223.0" minWidth="10.0" percentWidth="25.0" prefWidth="77.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.0" minWidth="10.0" percentWidth="75.0" prefWidth="203.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints maxHeight="705.0" minHeight="10.0" prefHeight="378.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="456.0" minHeight="10.0" prefHeight="372.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="378.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="720.0" prefWidth="200.0">
-               <content>
-                  <TableView fx:id="PositionsTable" prefHeight="376.0" prefWidth="128.0">
-                    <columns>
-                      <TableColumn fx:id="positionsColumn" minWidth="-Infinity" prefWidth="90.0" text="Positions" />
-                    </columns>
-                  </TableView>
-               </content>
-            </ScrollPane>
-            <Accordion prefHeight="413.0" prefWidth="278.0" visible="false" GridPane.rowIndex="1">
-              <panes>
-                <TitledPane animated="false" text="Real Time" />
-                <TitledPane animated="false" text="Race Time">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </TitledPane>
-                  <TitledPane animated="false" text="Boat Stats">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                    </content>
-                  </TitledPane>
-                <TitledPane animated="false" text="Boats By Latest Mark">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </TitledPane>
-                  <TitledPane animated="false" text="Boats By Finish">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                    </content>
-                  </TitledPane>
-                  <TitledPane animated="false" text="Options">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                    </content>
-                  </TitledPane>
-              </panes>
-            </Accordion>
+            <TableView fx:id="PositionsTable" prefHeight="376.0" prefWidth="128.0">
+              <columns>
+                <TableColumn fx:id="positionsColumn" editable="false" minWidth="-Infinity" prefWidth="90.0" sortable="false" text="Positions" />
+              </columns>
+            </TableView>
             <TableView fx:id="boatInfoTableView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
               <columns>
-                <TableColumn fx:id="boatNameColumn" prefWidth="104.0" text="Boat" />
-                <TableColumn fx:id="boatSpeedColumn" prefWidth="98.0" text="Speed" />
+                <TableColumn fx:id="boatNameColumn" editable="false" prefWidth="104.0" sortable="false" text="Boat" />
+                <TableColumn fx:id="boatSpeedColumn" editable="false" prefWidth="98.0" sortable="false" text="Speed" />
               </columns>
             </TableView>
          </children>
