--- a/src/main/resources/RaceView.fxml
+++ b/src/main/resources/RaceView.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,7 +14,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="mainBorderPane" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.RaceController">
+<BorderPane fx:id="mainBorderPane" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.RaceController">
     <left>
         <AnchorPane maxWidth="248" minWidth="248" prefWidth="248">
             <children>
@@ -51,6 +56,7 @@
                 <Button fx:id="annotationBtn" layoutX="14.0" layoutY="600.0" mnemonicParsing="false" onAction="#annotationBtnClicked" text="Remove Annotations" />
                 <Button fx:id="fpsBtn" layoutX="14.0" layoutY="700.0" mnemonicParsing="false" onAction="#fpsBtnClicked" text="Remove FPS counter" />
                 <Button fx:id="startButton" layoutX="14.0" layoutY="500.0" mnemonicParsing="false" onAction="#startButtonPressed" text="Start Race" />
+            <ListView fx:id="startersList" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="60.0" minWidth="200.0" />
 
             </children>
        </AnchorPane>
