--- a/visualiser/src/main/resources/RaceView.fxml
+++ b/visualiser/src/main/resources/RaceView.fxml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="mainBorderPane" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.RaceController">
+<BorderPane fx:id="mainBorderPane" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.RaceController">
     <left>
         <AnchorPane maxWidth="248" minWidth="248" prefWidth="248">
             <children>
@@ -59,6 +56,13 @@
                 <CheckBox fx:id="BoatSpeedCheckBox" layoutX="13.0" layoutY="439.0" mnemonicParsing="false" onAction="#ToggleBoatSpeedAnnotation" selected="true" text="Boat Speeds" />
                 <CheckBox fx:id="BoatNameCheckBox" layoutX="13.0" layoutY="421.0" mnemonicParsing="false" onAction="#ToggleBoatNameAnnotation" selected="true" text="Boat Names" />
             <ListView fx:id="startersList" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="60.0" minWidth="200.0" />
+            <TableView fx:id="zoomBoatTable" layoutX="124.0" layoutY="231.0" prefHeight="200.0" prefWidth="200.0">
+              <columns>
+                <TableColumn fx:id="zoomBoatTableCol" prefWidth="199.0" text="Boats" />
+              </columns>
+            </TableView>
+            <Button fx:id="zoomBoatZoomButton" layoutX="123.0" layoutY="427.0" mnemonicParsing="false" onAction="#zoomOnBoat" text="Zoom" />
+            <Button fx:id="zoomBoatUnzoomButton" layoutX="193.0" layoutY="427.0" mnemonicParsing="false" onAction="#unzoom" text="Unzoom" />
 
             </children>
        </AnchorPane>
