Can extract Course Order and Course Compound Marks from XML now.
- We need to refactor a bunch of classes - Landmarks -> CompoundMarks, delete Legs, get rid of stuff that will not matter now that we are streaming.
- Need to get Abel to help with this reformatting of the Canvas/Group - his monster method requires his attention.

#story[46, 47] #pair[osr13, msi52]

--- a/visualiser/src/main/resources/RaceView.fxml
+++ b/visualiser/src/main/resources/RaceView.fxml
@@ -58,7 +58,7 @@
                 <Button fx:id="startButton" layoutX="14.0" layoutY="500.0" mnemonicParsing="false" onAction="#startButtonPressed" text="Start Race" />
                 <CheckBox fx:id="BoatSpeedCheckBox" layoutX="13.0" layoutY="439.0" mnemonicParsing="false" onAction="#ToggleBoatSpeedAnnotation" selected="true" text="Boat Speeds" />
                 <CheckBox fx:id="BoatNameCheckBox" layoutX="13.0" layoutY="421.0" mnemonicParsing="false" onAction="#ToggleBoatNameAnnotation" selected="true" text="Boat Names" />
-            <ListView fx:id="startersList" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="60.0" minWidth="200.0" />
+            <ListView fx:id="startersList" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="60.0" minWidth="200.0" visible="false" />
 
             </children>
        </AnchorPane>
