--- a/visualiser/src/main/resources/RaceView.fxml
+++ b/visualiser/src/main/resources/RaceView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import java.lang.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
@@ -7,11 +8,14 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="mainBorderPane" maxHeight="770.0" maxWidth="1208.0" minHeight="600.0" minWidth="800.0" prefHeight="728.0" prefWidth="1206.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.RaceController">
@@ -19,7 +23,7 @@
         <AnchorPane maxWidth="248" minWidth="248" prefWidth="248">
             <children>
 
-                <TableView fx:id="positionTable" layoutY="-1.0" maxWidth="248" minWidth="248" prefHeight="728.0" prefWidth="248">
+                <TableView fx:id="positionTable" layoutY="-1.0" maxWidth="248" minWidth="248" prefHeight="492.0" prefWidth="248">
                     <columns>
                         <TableColumn fx:id="positionCol" maxWidth="31.0" prefWidth="20.0" sortable="false" />
                         <TableColumn fx:id="nameCol" maxWidth="200.0" prefWidth="150.0" sortable="false" text="Name" />
@@ -29,6 +33,14 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
                 </TableView>
+            <LineChart fx:id="sparklinePlaceholderChart" layoutY="491.0" prefHeight="239.0" prefWidth="247.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </LineChart>
             </children>
         </AnchorPane>
     </left>
