--- a/visualiser/src/main/resources/RaceView.fxml
+++ b/visualiser/src/main/resources/RaceView.fxml
@@ -21,27 +21,39 @@
 <BorderPane fx:id="mainBorderPane" maxHeight="770.0" maxWidth="1208.0" minHeight="600.0" minWidth="800.0" prefHeight="728.0" prefWidth="1206.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.RaceController">
     <left>
         <AnchorPane maxWidth="248" minWidth="248" prefWidth="248">
-            <children>
-
-                <TableView fx:id="positionTable" layoutY="-1.0" maxWidth="248" minWidth="248" prefHeight="492.0" prefWidth="248">
-                    <columns>
-                        <TableColumn fx:id="positionCol" maxWidth="31.0" prefWidth="20.0" sortable="false" />
-                        <TableColumn fx:id="nameCol" maxWidth="200.0" prefWidth="150.0" sortable="false" text="Name" />
-                        <TableColumn fx:id="speedCol" maxWidth="200.0" prefWidth="78.0" sortable="false" text="Speed(m/s)" />
-                    </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-                </TableView>
-            <LineChart fx:id="sparklinePlaceholderChart" layoutY="491.0" prefHeight="239.0" prefWidth="247.0">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-            </LineChart>
-            </children>
+         <children>
+            <SplitPane fx:id="sidePanelSplit" dividerPositions="0.6804407713498623" orientation="VERTICAL" prefHeight="728.0" prefWidth="249.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+            
+                                                    <TableView fx:id="positionTable" layoutX="-1.0" maxWidth="255.0" minWidth="248" prefHeight="492.0" prefWidth="249.0">
+                                <columns>
+                                    <TableColumn fx:id="positionCol" maxWidth="31.0" prefWidth="20.0" sortable="false" />
+                                    <TableColumn fx:id="nameCol" maxWidth="200.0" prefWidth="150.0" sortable="false" text="Name" />
+                                    <TableColumn fx:id="speedCol" maxWidth="200.0" prefWidth="78.0" sortable="false" text="Speed(m/s)" />
+                                </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                            </TableView>
+                     </children>
+                  </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="557.0" prefWidth="158.0">
+                     <children>
+                        <LineChart fx:id="sparklinesChart" layoutX="-3.0" layoutY="-5.0" prefHeight="234.0" prefWidth="251.0">
+                          <xAxis>
+                            <NumberAxis fx:id="xAxis" side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis fx:id="yAxis" side="LEFT" />
+                          </yAxis>
+                        </LineChart>
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
+         </children>
         </AnchorPane>
     </left>
     <center>
