--- a/visualiser/src/main/resources/RaceView.fxml
+++ b/visualiser/src/main/resources/RaceView.fxml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.*?>
 <?import java.lang.*?>
 <?import javafx.scene.*?>
+<?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="mainBorderPane" maxHeight="770.0" maxWidth="1208.0" minHeight="600.0" minWidth="800.0" prefHeight="728.0" prefWidth="1206.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.RaceController">
     <left>
         <AnchorPane maxWidth="248" minWidth="248" prefWidth="248">
          <children>
-            <SplitPane fx:id="sidePanelSplit" dividerPositions="0.6804407713498623" orientation="VERTICAL" prefHeight="728.0" prefWidth="249.0">
+            <SplitPane fx:id="sidePanelSplit" dividerPositions="0.6804" orientation="VERTICAL" prefHeight="728.0" prefWidth="249.0">
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
             
-                                                    <TableView fx:id="positionTable" layoutX="-1.0" maxWidth="255.0" minWidth="248" prefHeight="492.0" prefWidth="249.0">
+                                                    <TableView fx:id="positionTable" layoutX="-1.0" maxWidth="255.0" minWidth="248" prefHeight="491.0" prefWidth="249.0">
                                 <columns>
                                     <TableColumn fx:id="positionCol" maxWidth="31.0" prefWidth="20.0" sortable="false" />
                                     <TableColumn fx:id="nameCol" maxWidth="200.0" prefWidth="150.0" sortable="false" text="Name" />
-                                    <TableColumn fx:id="speedCol" maxWidth="200.0" prefWidth="78.0" sortable="false" text="Speed(m/s)" />
+                                    <TableColumn fx:id="speedCol" maxWidth="200.0" prefWidth="73.0" sortable="false" text="Speed" />
                                 </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -41,9 +43,9 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="557.0" prefWidth="158.0">
                      <children>
-                        <LineChart fx:id="sparklinesChart" layoutX="-3.0" layoutY="-5.0" prefHeight="234.0" prefWidth="251.0">
+                        <LineChart fx:id="sparklinesChart" layoutX="-3.0" layoutY="-5.0" prefHeight="234.0" prefWidth="251.0" stylesheets="@CSS/Sparkline.css">
                           <xAxis>
-                            <NumberAxis fx:id="xAxis" side="BOTTOM" />
+                            <NumberAxis side="BOTTOM" fx:id="xAxis" />
                           </xAxis>
                           <yAxis>
                             <NumberAxis fx:id="yAxis" side="LEFT" />
