--- a/visualiser/src/main/resources/RaceView.fxml
+++ b/visualiser/src/main/resources/RaceView.fxml
@@ -33,7 +33,7 @@
         </AnchorPane>
     </left>
     <center>
-       <AnchorPane fx:id="viewAnchorPane" style="-fx-background-color: #26c6d8;" BorderPane.alignment="CENTER">
+       <AnchorPane fx:id="viewAnchorPane" style="-fx-background-color: #a3ccff;" BorderPane.alignment="CENTER">
             <children>
                 <Group fx:id="group" autoSizeChildren="false" />
                 <Label fx:id="clock" layoutX="663.0" text="00:00:00" textAlignment="RIGHT" visible="false">
