Story 30: More fixing boat order in race. Fixed comparator. Fixed sparkline display. Added more CSS.
Attempted to alter comparator for a more accurate positioning system.
Changed the sizing of the spakline chart so that it is always the same size after resizing.
Changed colouration of boats, now boats are given a set colour that matches the colour in the sparkline chart.
Removed sparkline chart legend.

#story[954] #pair[tjg73, msi52]

--- a/visualiser/src/main/resources/CSS/Sparkline.css
+++ b/visualiser/src/main/resources/CSS/Sparkline.css
@@ -29,3 +29,15 @@
     -fx-stroke-width: 2px;
     -fx-effect: null;
 }
+
+/*yellow, blue, pink, orange, green, purple, red, poo brown*/
+/*"#ffff00", "#0033cc", "#cc00ff", "#ff6600", "#00cc00", "#6600cc", "#ff0000", "#663300"*/
+
+.default-color0.chart-series-line { -fx-stroke: #ffff00; }
+.default-color1.chart-series-line { -fx-stroke: #0033cc; }
+.default-color2.chart-series-line { -fx-stroke: #cc00ff; }
+.default-color4.chart-series-line { -fx-stroke: #ff6600; }
+.default-color5.chart-series-line { -fx-stroke: #00cc00; }
+.default-color6.chart-series-line { -fx-stroke: #6600cc; }
+.default-color7.chart-series-line { -fx-stroke: #ff0000; }
+.default-color8.chart-series-line { -fx-stroke: #663300; }
