--- a/visualiser/src/main/resources/FXML/RaceView.fxml
+++ b/visualiser/src/main/resources/FXML/RaceView.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane fx:id="mainBorderPane" maxHeight="770.0" maxWidth="1208.0" minHeight="600.0" minWidth="800.0" prefHeight="728.0" prefWidth="1206.0" stylesheets="@CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.RaceController">
+
+<BorderPane fx:id="mainBorderPane" maxHeight="770.0" maxWidth="1208.0" minHeight="600.0" minWidth="800.0" prefHeight="728.0" prefWidth="1206.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <left>
         <AnchorPane maxWidth="248" minWidth="248" prefWidth="248">
          <children>
@@ -29,7 +34,7 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="557.0" prefWidth="158.0">
                      <children>
-                        <LineChart fx:id="sparklinesChart" layoutX="-3.0" layoutY="-5.0" prefHeight="234.0" prefWidth="251.0" stylesheets="@CSS/Sparkline.css">
+                        <LineChart fx:id="sparklinesChart" layoutX="-3.0" layoutY="-5.0" prefHeight="234.0" prefWidth="251.0" stylesheets="@../CSS/Sparkline.css">
                           <xAxis>
                             <NumberAxis side="BOTTOM" fx:id="xAxis" />
                           </xAxis>
