Story 1129: Lobby now partially acts to add boats and their data to the lobby table.
Removed and deleted and extracted and demolished the RaceViewController class. Only took us 6 months.

Signed-off-by: Sam <sba136@uclive.ac.nz>

#refactor, #story[1129], #implement #pair[msi52, sba136]

--- a/visualiser/src/main/resources/FXML/Lobby.fxml
+++ b/visualiser/src/main/resources/FXML/Lobby.fxml
@@ -22,11 +22,10 @@
     <RowConstraints maxHeight="112.0" minHeight="0.0" prefHeight="45.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <TableView fx:id="contestantTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
         <columns>
-          <TableColumn prefWidth="137.0" text="Username" />
-          <TableColumn prefWidth="100.0" text="Rank" />
-            <TableColumn prefWidth="100.0" text="Ping" />
+          <TableColumn fx:id="teamColumn" prefWidth="137.0" text="Team Name" />
+          <TableColumn fx:id="clientColumn" prefWidth="100.0" text="Client ID" />
         </columns>
       </TableView>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time to Race Pre-Start:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
