added a boat status column to the table

--- a/visualiser/src/main/resources/FXML/FinishingPage.fxml
+++ b/visualiser/src/main/resources/FXML/FinishingPage.fxml
@@ -28,6 +28,7 @@
                       <TableColumn prefWidth="75.0" text="Position" />
                       <TableColumn prefWidth="75.0" text="Boat Name" />
                         <TableColumn prefWidth="75.0" text="Finish Time" />
+                        <TableColumn prefWidth="75.0" text="Status" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
