Exit to menu button now goes back to button,
Some changes have been made to the raceView fxml to try to make the finishing pane center when the window is resized. Didn't work.

Signed-off-by: Sam <sba136@uclive.ac.nz>
#implement

--- a/visualiser/src/main/resources/FXML/RaceView.fxml
+++ b/visualiser/src/main/resources/FXML/RaceView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.chart.*?>
@@ -68,11 +69,15 @@
                 <CheckBox fx:id="BoatSpeedCheckBox" layoutX="13.0" layoutY="439.0" mnemonicParsing="false" onAction="#ToggleBoatSpeedAnnotation" selected="true" text="Boat Speeds" />
                 <CheckBox fx:id="BoatNameCheckBox" layoutX="13.0" layoutY="421.0" mnemonicParsing="false" onAction="#ToggleBoatNameAnnotation" selected="true" text="Boat Names" />
             <ListView fx:id="startersList" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="60.0" minWidth="200.0" prefHeight="400.0" prefWidth="275.0" visible="false" />
-            <Pane fx:id="finishingPane" layoutX="291.0" layoutY="207.0" prefHeight="314.0" prefWidth="409.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="200.0">
+            <Group fx:id="finishingGroup" layoutX="10.0" layoutY="-106.0" AnchorPane.bottomAnchor="157.0" AnchorPane.leftAnchor="235.0" AnchorPane.rightAnchor="123.0" AnchorPane.topAnchor="171.0">
                <children>
-                  <Button mnemonicParsing="false" text="Button" />
+                  <Pane fx:id="finishingPane" layoutX="225.0" layoutY="277.0" maxHeight="9999.0" maxWidth="9999.0" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </Pane>
                </children>
-            </Pane>
+            </Group>
 
             </children>
        </AnchorPane>
